# vk_sandbox

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md
core_interfaces/include/: common_tools.h  frame_info.h  render_data.h  shader_info.h
core_interfaces/include/common/: common_tools.h  frame_info.h  transform_component.h
core_interfaces/include/global_common/: frame_info.h  key_codes.h  render_data.h  shader_info.h
core_interfaces/include/interfaces/: asset_provider_i.h  entity_i.h  game_factory_i.h  game_layer_i.h  game_object_i.h  layer_i.h  render_system_i.h  renderer_i.h  scene_i.h  window_i.h  window_input_i.h
res/models/gltf/: chinesedragon.gltf  color_teapot_spheres.gltf  cube.gltf  cube_fixed.gltf  deer.gltf  deferred_box.gltf  deferred_floor.gltf  displacement_plane.gltf  env_cube.gltf  fireplace.gltf  glowsphere.gltf  lavaplanet.gltf  oaktree.gltf  plane.gltf  plane_circle.gltf  plane_z.gltf  plants.gltf  reflection_scene.gltf  retroufo.gltf  retroufo_glow.gltf  retroufo_red_lowpoly.gltf  rock01.gltf  samplebuilding.gltf  samplebuilding_glass.gltf  sampleroom.gltf  samplescene.gltf  shadowscene_fire.gltf  sphere.gltf  suzanne.gltf  suzanne_lods.gltf  teapot.gltf  terrain_gridlines.gltf  torusknot.gltf  treasure_glow.gltf  treasure_smooth.gltf  tunnel_cylinder.gltf  venus.gltf  voyager.gltf  vulkanscene_shadow.gltf  vulkanscenebackground.gltf  (+1 more)
res/models/gltf/2CylinderEngine/glTF/: 2CylinderEngine.gltf
res/models/gltf/2CylinderEngine/glTF-Draco/: 2CylinderEngine.gltf
res/models/gltf/ABeautifulGame/glTF/: ABeautifulGame.gltf
res/models/gltf/CesiumMan/glTF-Embedded/: CesiumMan.gltf
res/models/gltf/Corset/glTF/: Corset.gltf
res/models/gltf/Corset/glTF-Draco/: Corset.gltf
res/models/gltf/DamagedHelmet/glTF/: DamagedHelmet.gltf
res/models/gltf/Deagle/: scene.gltf
res/models/gltf/Falls/: license.txt  scene.gltf
res/models/gltf/armor/: armor.gltf
res/models/gltf/cerberus/: cerberus.gltf  cerberus_correct.gltf
res/models/gltf/cyborg/: license.txt  scene.gltf
res/models/gltf/ftm/: scene.gltf
res/models/gltf/hover_car/: scene.gltf
res/models/gltf/mc_island/: license.txt
res/models/gltf/quad/: scene.gltf
res/models/gltf/real_scene/: license.txt  scene.gltf
res/models/gltf/sponza_collision/: sponza_collision.glb  sponza_collision.gltf
res/models/gltf/test/: scene.gltf
res/shaders/: cerberus.frag  cerberus.vert  cubemap.vert  equirect_to_cube.frag  equirectangular_to_cubemap.frag  equirectangular_to_cubemap.vert  gltf_frag.frag  gltf_vert.vert  irradiance_cube.frag  prefiltered_env_map.frag  scene_frag.frag  scene_vert.vert  skybox_ibl.frag  skybox_ibl.vert
res/shaders/include/: helpers.glsl  shader_material.glsl  srgbtolinear.glsl  tonemapping.glsl
res/shaders/spirV/: cerberus.frag.spv  cerberus.spv  cerberus.vert.spv  cubemap.vert.spv  equirect_to_cube.frag.spv  equirectangular_to_cubemap.spv  equirectangular_to_cubemap.vert.spv  filtered_cube.vert.spv  frag.frag.spv  gen_brdflut.frag.spv  gen_brdflut.vert.spv  gltf_frag.frag.spv  gltf_frag.spv  gltf_vert.spv  gltf_vert.vert.spv  irradiance_cube.frag.spv  point_light.frag.spv  point_light.vert.spv  prefiltered_env_map.frag.spv  scene_frag.frag.spv  scene_vert.spv  scene_vert.vert.spv  skybox_ibl.frag.spv  skybox_ibl.vert.spv  vert.vert.spv
res/textures/hdr/: quadrangle_sunny_4k.hdr  qwantani_night_puresky_4k.hdr
sandbox_engine/: CMakeLists.txt
sandbox_engine/include/: asset_manager.h  engine.h
sandbox_engine/include/base/: engine_scene_base.h
sandbox_engine/include/common/: GLFWwindowAndInput.h  engine_pch.h  glfw_input.h
sandbox_engine/include/physics/: physics_engine.h
sandbox_engine/src/: asset_manager.cpp  engine.cpp
sandbox_engine/src/base/: engine_scene_base.cpp
sandbox_engine/src/common/: GLFWwindowAndInput.cpp  glfw_input.cpp
sandbox_engine/src/physics/: physics_engine.cpp
sandbox_game/: CMakeLists.txt
sandbox_game/include/camera/: camera.h
sandbox_game/include/common/: game_pch.h
sandbox_game/include/entities/: game_object.h  player.h
sandbox_game/include/game/: game_layer.h
sandbox_game/include/input/: player_input.h
sandbox_game/include/layers/: game_layer.h  imgui_layer.h
sandbox_game/include/scene/: scene.h
sandbox_game/res/scene_assets/: default_scene_assets.json  stow.txt
sandbox_game/res/scenes/: default_scene.json  stow
sandbox_game/src/: main.cpp
sandbox_game/src/camera/: camera.cpp
sandbox_game/src/entities/: game_object.cpp  player.cpp
sandbox_game/src/game/: game_layer.cpp
sandbox_game/src/input/: player_input.cpp
sandbox_game/src/layers/: game_layer.cpp  imgui_layer.cpp
sandbox_game/src/scene/: scene.cpp
sandbox_physics/: CMakeLists.txt
sandbox_physics/include/: physics.h
sandbox_physics/src/: physics.cpp
sandbox_renderer/: CMakeLists.txt
sandbox_renderer/include/common/: renderer_pch.h
sandbox_renderer/include/vk_tools/: vk_tools.h
sandbox_renderer/include/vulkan_wrapper/: vulkan_descriptor.h  vulkan_device.h  vulkan_gltf.h  vulkan_renderer.h  vulkan_swapchain.h  vulkan_texture.h
sandbox_renderer/include/vulkan_wrapper/core/: render_graph.h  renderable_registry.h  vulkan_renderer.h  window.h
sandbox_renderer/include/vulkan_wrapper/render_systems/: gltf_render_system.h  obj_render_system.h  point_light_rs.h  pointlight_render_system.h  scene_render_system.h  scene_rs.h  skybox_ibl_rs.h  skybox_render_system.h
sandbox_renderer/src/vk_tools/: vk_tools.cpp
sandbox_renderer/src/vulkan_wrapper/: vulkan_buffer.cpp  vulkan_descriptor.cpp  vulkan_device.cpp  vulkan_gltf.cpp  vulkan_image.cpp  vulkan_instance.cpp  vulkan_obj.cpp  vulkan_pipeline.cpp  vulkan_renderer.cpp  vulkan_swapchain.cpp  vulkan_texture.cpp
sandbox_renderer/src/vulkan_wrapper/core/: render_graph.cpp  renderable_registry.cpp  vulkan_renderer.cpp  window.cpp
sandbox_renderer/src/vulkan_wrapper/render_systems/: gltf_render_system.cpp  obj_render_system.cpp  point_light_rs.cpp  pointlight_render_system.cpp  scene_render_system.cpp  scene_rs.cpp  skybox_ibl_rs.cpp  skybox_render_system.cpp
